--- a/index.html
+++ b/index.html
@@ -1,28 +1,89 @@
 ---
 layout: default
 ---
-<section id="hero" class="slide">
-	<aside>The Evidence-based Health Care Group is an educational collaborative that provides customized consultation to organizations interested in implementing evidence-based health care.</aside>
+<section id="hero">
+	<div class="content">
+			<aside>
+				<h1>Improve Health Outcomes</h1>
+				<p>Let EBHC Group prepare you to implement evidence-based healthcare.</p>
+			</aside>
+		<div class="summary">
+			 <p>The Evidence-based Healthcare Group is an educational collaborative that provides customized consultation to organizations interested in implementing evidence-based healthcare. We offer a variety of services to assist in this process, including:</p>
+			<ul>
+				<li>Needs Assessment</li>
+				<li>Training &amp; Education</li>
+				<li>Curriculum Development</li>
+				<li>Implementation Strategies &amp; Evaluation</li>
+			</ul>
+			<p>Our mission is to help healthcare professionals and organizations build appropriate skills and infrastructure to implement EBHC and improve health outcomes.</p>
+		</div>
+		</div>
 </section>
-<section id="summary" class="slide">
-	 <p>We offer a variety of services to assist in this process, including:</p>
-	<ul>
-		<li>Needs Assessment</li>
-		<li>Training &amp; Education</li>
-		<li>Curriculum Development</li>
-		<li>Implementation Strategies &amp; Evaluation</li>
+<section id="education">
+	<aside>
+		<h2>Get Educated</h2>
+		<p>Developing a new standard in distance learning.</p>
+	</aside>
+</section>
+<section class="summary">
+	<div class="content">
+	<p>The EBHC Group is developing distance learning educational programs that will 	help educational institutions teach evidence-based healthcare. This program will implement state of the art distance learning technologies to facilitate both asynchronous and synchronous learning platforms. Our services will include:</p>
+	<ul class="unstyled">
+		<li class="education"><em>Online-only courses:</em> This one semester online course includes exercises, quizzes and automatic grade reporting. Topics will include:
+			<ul>
+				<li>Introduction to EBHC</li>
+				<li>Levels of Evidence</li>
+				<li>Strategic Literature Searching</li>
+				<li>Study Design</li>
+				<li>Critical Appraisal</li>
+				<li>Medical Statistics</li>
+				<li>Implementation</li>
+				<li>Critical Thinking</li>
+				<li>Science Communication</li>
+			</ul>
+		</li>
+		<li class="education"><em>Hybrid courses:</em> This one semester program combines the online course with faculty-facilitate small group sessions. Faculty of your educational institution receive specific activities and coaching to help lead small group activities. This will enable students to build specific skill-sets critical to implementing evidence-based healthcare.</li>
 	</ul>
-	<p>Our mission is to help healthcare professionals and organizations build appropriate skills and infrastructure to implement EBHC and improve health outcomes.</p>
+		</div>
 </section>
-<section id="education" class="slide">
+<section id="training">
+	<aside>
+		<h2>Get Trained</h2>
+		<p>Spreading the high quality medicine world-wide</p>
+	</aside>
+	
 </section>
-<section class="slide"></section>
-<section id="training" class="slide">
+<section class="summary">
+	<div class="content">
+		<p>Evidence-based healthcare is the standard for the practice of contemporary, high-quality medicine throughout the world. U.S. healthcare schools, including medicine, dentistry and allied healthcare professionals, all offer a curriculum in EBHC. Some recent changes in the U.S. healthcare education standards now require healthcare education programs to offer an EBHC curriculum, a change that has accelerated interest in program and curriculum development in this area. Having an effective and comprehensive teaching program in EBHC is becoming the standard in all healthcare education programs worldwide, much as it has become in medicine over the last decade.</p>
+		<p>The EBHC Group offers customized training programs to help members of healthcare organizations, including educational institutions, develop a greater understanding of the EBHC. These programs provide the skill development needed to successfully and efficiently implement EBHC. They also provide a basis of skills needed to teach EBHC to faculty, residents and students. Training programs are typically 2-5 days or more, and are customized to the individual school's specific needs.</p>
+	</div>
 </section>
-<section class="slide"></section>
-<section id="implementation" class="slide">
+<section id="implementation">
+	<aside>
+		<h2>Learn to Implement EBHC</h2>
+		<p>Implementation is the key to developing an evidence-based medicine approach to treating patients</p>
+	</aside>
 </section>
-<section class="slide"></section>
-<section id="about-us" class="slide">
+<section class="summary">
+	<div class="content">
+		<p>Implementation is the key to developing an EBHC approach to treating patients. However, research indicates that increasing knowledge is not sufficient to motivate change to EBHC. There are many barriers, including both individual and institutional barriers that may prevent progress. EBHC Group offers customized implementation programs to help organizations succeed. Our programs include:</p>
+		<ul>
+			<li>Needs Assessment</li>
+			<li>Strategic Implementation Plan Development</li>
+			<li>Customized Education and Training Programs</li>
+			<li>Program Evaluation</li>
+		</ul>
+	</div>
 </section>
-<section></section>
+<section id="about-us">
+	<aside>
+		<h2>About Us</h2>
+		<p>We take evidence-based healthcare very seriously.</p>
+	</aside>
+	
+</section>
+<section class="summary">
+	
+	
+</section>
