--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ layout: default
 	<aside>
 		<h2>Get Educated</h2>
 		<p>Developing a new standard in distance learning.</p>
-	</aside>
+	</aside> 
+	<div class="container">
 	<p>The EBHC Group is developing distance learning educational programs that will 	help educational institutions teach evidence-based healthcare. This program will implement state of the art distance learning technologies to facilitate both asynchronous and synchronous learning platforms. Our services will include:</p>
 	<ul class="unstyled">
 		<li class="education"><em>Online-only courses:</em> This one semester online course includes exercises, quizzes and automatic grade reporting. Topics will include:
@@ -42,7 +43,7 @@ layout: default
 		</li>
 		<li class="education"><em>Hybrid courses:</em> This one semester program combines the online course with faculty-facilitate small group sessions. Faculty of your educational institution receive specific activities and coaching to help lead small group activities. This will enable students to build specific skill-sets critical to implementing evidence-based healthcare.</li>
 	</ul>
-	
+	</div>
 	</div>
 </section>
 <section id="training">
@@ -51,8 +52,10 @@ layout: default
 		<h2>Get Trained</h2>
 		<p>Spreading the high quality medicine world-wide</p>
 	</aside>
+	<div class="container">
 	<p>Evidence-based healthcare is the standard for the practice of contemporary, high-quality medicine throughout the world. U.S. healthcare schools, including medicine, dentistry and allied healthcare professionals, all offer a curriculum in EBHC. Some recent changes in the U.S. healthcare education standards now require healthcare education programs to offer an EBHC curriculum, a change that has accelerated interest in program and curriculum development in this area. Having an effective and comprehensive teaching program in EBHC is becoming the standard in all healthcare education programs worldwide, much as it has become in medicine over the last decade.</p>
 	<p>The EBHC Group offers customized training programs to help members of healthcare organizations, including educational institutions, develop a greater understanding of the EBHC. These programs provide the skill development needed to successfully and efficiently implement EBHC. They also provide a basis of skills needed to teach EBHC to faculty, residents and students. Training programs are typically 2-5 days or more, and are customized to the individual school's specific needs.</p>
+	</div>
 	</div>
 </section>
 <section id="implementation">
@@ -61,6 +64,7 @@ layout: default
 			<h2>Learn to Implement EBHC</h2>
 			<p>Implementation is the key to developing an evidence-based medicine approach to treating patients</p>
 		</aside>
+		<div class="container">
 		<p>Implementation is the key to developing an EBHC approach to treating patients. However, research indicates that increasing knowledge is not sufficient to motivate change to EBHC. There are many barriers, including both individual and institutional barriers that may prevent progress. EBHC Group offers customized implementation programs to help organizations succeed. Our programs include:</p>
 		<ul>
 			<li>Needs Assessment</li>
@@ -68,13 +72,14 @@ layout: default
 			<li>Customized Education and Training Programs</li>
 			<li>Program Evaluation</li>
 		</ul>
-	
+		</div>
 	</div>
 </section>
 <section id="about-us">
+	<div class="content">
 	<aside>
 		<h2>About Us</h2>
 		<p>We take evidence-based healthcare very seriously.</p>
 	</aside>
-	
+	</div>
 </section>
