--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@ layout: default
 <section id="hero">
 	<div class="content">
 			<aside>
-				<h1>Improve Health Outcomes</h1>
-				<p>Let EBHC Group prepare you to implement evidence-based healthcare.</p>
+				<h1 class="text-center">Improve Health Outcomes</h1>
+				<p class="text-center">Let EBHC Group prepare you to implement evidence-based healthcare.</p>
 			</aside>
-		<div class="summary">
-			 <p>The Evidence-based Healthcare Group is an educational collaborative that provides customized consultation to organizations interested in implementing evidence-based healthcare. We offer a variety of services to assist in this process, including:</p>
-			<ul>
-				<li>Needs Assessment</li>
-				<li>Training &amp; Education</li>
-				<li>Curriculum Development</li>
-				<li>Implementation Strategies &amp; Evaluation</li>
-			</ul>
-			<p>Our mission is to help healthcare professionals and organizations build appropriate skills and infrastructure to implement EBHC and improve health outcomes.</p>
 		</div>
-		</div>
+</section>
+<section id="big-three" class="clearfix">
+	<div class="span-4 col box">
+		<h3 class="text-center">Get Educated</h2>
+		<p class="icon text-center flaticon-open135"></p> 
+	</div>
+	<div class="span-4 col box two">
+		<h3 class="text-center">Get Trained</h2>
+		<p class="icon text-center flaticon-two174"></p> 
+	</div>
+	<div class="span-4 col box three">
+		<h3 class="text-center">Learn to Implement</h2>
+		<p class="icon text-center flaticon-teacher9"></p>
+	</div>
 </section>
 <section id="education">
 	<div class="content">
@@ -25,61 +29,87 @@ layout: default
 		<h2>Get Educated</h2>
 		<p>Developing a new standard in distance learning.</p>
 	</aside> 
-	<div class="container">
-	<p>The EBHC Group is developing distance learning educational programs that will 	help educational institutions teach evidence-based healthcare. This program will implement state of the art distance learning technologies to facilitate both asynchronous and synchronous learning platforms. Our services will include:</p>
-	<ul class="unstyled">
-		<li class="education"><em>Online-only courses:</em> This one semester online course includes exercises, quizzes and automatic grade reporting. Topics will include:
-			<ul>
-				<li>Introduction to EBHC</li>
-				<li>Levels of Evidence</li>
-				<li>Strategic Literature Searching</li>
-				<li>Study Design</li>
-				<li>Critical Appraisal</li>
-				<li>Medical Statistics</li>
-				<li>Implementation</li>
-				<li>Critical Thinking</li>
-				<li>Science Communication</li>
-			</ul>
-		</li>
-		<li class="education"><em>Hybrid courses:</em> This one semester program combines the online course with faculty-facilitate small group sessions. Faculty of your educational institution receive specific activities and coaching to help lead small group activities. This will enable students to build specific skill-sets critical to implementing evidence-based healthcare.</li>
-	</ul>
+		<p class="summary">The EBHC Group is developing distance learning educational programs that will help educational institutions teach evidence-based healthcare. This program will implement state of the art distance learning technologies to facilitate both asynchronous and synchronous learning platforms.</p>
 	</div>
+	<div class="clearfix">
+		<div class="box online col span-6">
+			<h3 class="text-center">Online-only courses</h3>
+			<p class="icon text-center flaticon-online1"></p>
+			<p class="summary">This one semester online course includes exercises, quizzes and automatic grade reporting. Topics include:</p>
+				<ul class="summary">
+					<li>Introduction to EBHC</li>
+					<li>Levels of Evidence</li>
+					<li>Strategic Literature Searching</li>
+					<li>Study Design</li>
+					<li>Critical Appraisal</li>
+					<li>Medical Statistics</li>
+					<li>Implementation</li>
+					<li>Critical Thinking</li>
+					<li>Science Communication</li>
+				</ul>
+		</div>
+		<div class="box col hybrid span-6">
+			<h3 class="text-center">Hybrid courses</h3>
+			<p class="icon text-center flaticon-teacher12"></p>			
+			<p class="summary">This one semester program combines the online course with faculty-facilitate small group sessions. Faculty of your educational institution receive specific activities and coaching to help lead small group activities. This will enable students to build specific skill-sets critical to implementing evidence-based healthcare.</p>
+		</div>
 	</div>
+	
 </section>
 <section id="training">
 	<div class="content">
-	<aside>
-		<h2>Get Trained</h2>
-		<p>Spreading the high quality medicine world-wide</p>
-	</aside>
-	<div class="container">
-	<p>Evidence-based healthcare is the standard for the practice of contemporary, high-quality medicine throughout the world. U.S. healthcare schools, including medicine, dentistry and allied healthcare professionals, all offer a curriculum in EBHC. Some recent changes in the U.S. healthcare education standards now require healthcare education programs to offer an EBHC curriculum, a change that has accelerated interest in program and curriculum development in this area. Having an effective and comprehensive teaching program in EBHC is becoming the standard in all healthcare education programs worldwide, much as it has become in medicine over the last decade.</p>
-	<p>The EBHC Group offers customized training programs to help members of healthcare organizations, including educational institutions, develop a greater understanding of the EBHC. These programs provide the skill development needed to successfully and efficiently implement EBHC. They also provide a basis of skills needed to teach EBHC to faculty, residents and students. Training programs are typically 2-5 days or more, and are customized to the individual school's specific needs.</p>
+		<aside>
+			<h2>Get Trained</h2>
+			<p>Spreading the high quality medicine world-wide</p>
+		</aside>
+		<p class="summary">Evidence-based healthcare is the standard for the practice of contemporary, high-quality medicine throughout the world. U.S. healthcare schools, including medicine, dentistry and allied healthcare professionals, all offer a curriculum in EBHC.</p>
 	</div>
+	<div class="clearfix">
+		<div class="span-6 col box">
+			<p class="summary">Some recent changes in the U.S. healthcare education standards now require healthcare education programs to offer an EBHC curriculum, a change that has accelerated interest in program and curriculum development in this area. Having an effective and comprehensive teaching program in EBHC is becoming the standard in all healthcare education programs worldwide, much as it has become in medicine over the last decade.</p>
+			<p class="summary">The EBHC Group offers customized training programs to help members of healthcare organizations, including educational institutions, develop a greater understanding of the EBHC. These programs provide the skill development needed to successfully and efficiently implement EBHC. They also provide a basis of skills needed to teach EBHC to faculty, residents and students. Training programs are typically 2-5 days or more, and are customized to the individual school's specific needs.</p>
+		</div>
+		<div class="span-6 col box image">&nbsp;</div>
 	</div>
+			
 </section>
 <section id="implementation">
 	<div class="content">
 		<aside>
-			<h2>Learn to Implement EBHC</h2>
-			<p>Implementation is the key to developing an evidence-based medicine approach to treating patients</p>
+			<h2>Learn to Implement</h2>
+			<p>Implementation is the key to success</p>
 		</aside>
-		<div class="container">
-		<p>Implementation is the key to developing an EBHC approach to treating patients. However, research indicates that increasing knowledge is not sufficient to motivate change to EBHC. There are many barriers, including both individual and institutional barriers that may prevent progress. EBHC Group offers customized implementation programs to help organizations succeed. Our programs include:</p>
-		<ul>
+		<p class="summary">Implementation is the key to developing an EBHC approach to treating patients. However, research indicates that increasing knowledge is not sufficient to motivate change to EBHC. There are many barriers, including both individual and institutional barriers that may prevent progress. EBHC Group offers customized implementation programs to help organizations succeed. Our programs include:</p>
+		<ul class="summary">
 			<li>Needs Assessment</li>
 			<li>Strategic Implementation Plan Development</li>
 			<li>Customized Education and Training Programs</li>
 			<li>Program Evaluation</li>
 		</ul>
-		</div>
 	</div>
 </section>
 <section id="about-us">
 	<div class="content">
 	<aside>
-		<h2>About Us</h2>
+		<h2>Who We Are</h2>
 		<p>We take evidence-based healthcare very seriously.</p>
 	</aside>
+	<p class="summary">Our consultants have expertise in developing EB education programs, training faculty employees, residents, and student at all levels and providing program implementation and program evaluation consulting services. All of our consultants bring an extensive background in evidence-based healthcare training and program implementation.</p>
+	
 	</div>
+	<div class="span-4 col box">
+		<h3 class="text-center">Elliot Abt, DDS, MS, MSc</h2>
+		<img src="/img/common/hawley.jpg"/> 
+		<p class="summary">Elliot Abt received a bachelor's degree in molecular biology from the University of Wisconsin-Madison. He went on to graduate training and received a master's degree in oral pathology and dental degree from the University of Illinois. Dr. Abt completed his dental residency training at Ravenswood and the University of Illinois Hospitals. From 1989-2004, Dr. Abt was the director of the dental residency programs at Ravenswood and Illinois Masonic Medical Center. He later went back to graduate school and received a master's degree in evidence-based healthcare from Oxford University. Dr. Abt is on the editorial board of the Journal of Evidence-Based Dental Practice, and has published articles and book chapters on research design, methodology, and statistical analysis of the dental literature. He has also participated in several ADA systemic reviews and clinical practice guidelines and is a current member of the ADA EBD Faculty Development Program. Dr. Abt is an adjunct associate professor of oral medicine at the University of Illinois and directs the journal club for dental residents at Illinois Masonic Medical Center. He is on the Critical Review Panel of the American Dental Association (ADA) Center for Evidence-Based Dentistry and teaches research methodology and biostatistics at the ADA/Forsyth Advanced EBD Course. Dr. Abt is in private dental practice and is a member of the ADA Council on Scientific Affairs.</p>
+	</div>
+	<div class="span-4 col box two">
+		<h3 class="text-center">Julie Frantsve-Hawley, PhD</h2>
+		<img src="/img/common/hawley.jpg"/>
+		<p class="summary">Julie Hawley received a bachelor's degree in biology from Loyola University of Chicago and a PhD from Harvard University's Biological and Biomedical Sciences program. She conducted a postdoctoral fellowship at the University of California, San Francisco, and attended the Medical Informatics program at Woods Hole and the Summer Institute at the Alan Alda Center for Communicating Science at Stony Brook University. Dr. Hawley directed the American Dental Association's Center for Evidence-based Dentistry for 10 years where she led the ADA's EBD workshop, and multiple custom EBD training programs for dental school faculty. She developed and launched the ADA's EBD website and their evidence-based practice guidelines program. De. Hawley has been the PI on several grants from the National Institute for Dental and Craniofacial Research, the National Library of Medicine, and the Agency for Healthcare Research and Quality. She is involved in dissemination and implementation research aimed at helping clinicians implement science into practice. She is also the editor of a textbook on Evidence-Based Dentistry published by Quintessence.</p>
+	</div>
+	<div class="span-4 col box three">
+		<h3 class="text-center">Robert J Weyant, MS, DMD, DrPH</h2>
+		<img src="/img/common/hawley.jpg"/>
+		<p class="summary">Robert J. Weyant received a bachelor's, master's and dental degrees from the University of Pittsburgh and a doctorate in public health (epidemiology) from the University of Michigan. Dr. Weyant is professor and chair of the Department of Dental Public Health and associate dean for public health at the University of Pittsburgh School of Dental Medicine. He is the current editor-in-chief of the Journal of Public Health Dentistry. Dr. Weyant runs an NIH sponsored research program in dental epidemiology focussing on oral health disparities of caries in children and has authored or co-authored over 100 papers in the peer review literature as well as two textbook chapters on evidence-based dentistry. He has been the principle developer of the evidence-based dentistry program at the University of Pittsburgh that includes didactic, small group, and clinical EBD training of dental students. This training program has been in operation for over 15 years. In addition to his training in epidemiology, Dr. Weyant completed courses in evidence-based care at the Forsyth Center and Oxford University. He presently participates as in instructor in the ADA Champions program and the ADA EBD Faculty Development Program. Dr. Weyant has been a mentor in the ADA's Critical Review Panel, is former associate editor of the Journal of Evidence-Based Dental Practice, and participated in the ADA development of several ADA systematic reviews and guideline development. Dr. Weyant has been a tutor in tow courses on teaching evidence-based medicine at Oxford University. He also has been a member of the Institute of Medicine Panel on dental access and on the National Advisory Panel for NIH's National Institute for Dental and Craniofacial Research.</p>
+	</div>	
 </section>
