--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@ layout: default
 				<p class="text-center">Let EBHC Group prepare you to implement evidence-based healthcare.</p>
 			</aside>
 		</div>
+		<p class="icon flaticon-arrow558"></p> 
 </section>
 <section id="big-three" class="clearfix">
-	<div class="span-4 col box">
+	<div class="span-4 col box" data-destination="education">
 		<h3 class="text-center">Get Educated</h2>
 		<p class="icon text-center flaticon-open135"></p> 
 	</div>
-	<div class="span-4 col box two">
+	<div class="span-4 col box two" data-destination="training">
 		<h3 class="text-center">Get Trained</h2>
 		<p class="icon text-center flaticon-two174"></p> 
 	</div>
-	<div class="span-4 col box three">
+	<div class="span-4 col box three" data-destination="implementation">
 		<h3 class="text-center">Learn to Implement</h2>
 		<p class="icon text-center flaticon-teacher9"></p>
 	</div>
@@ -95,21 +96,21 @@ layout: default
 		<p>We take evidence-based healthcare very seriously.</p>
 	</aside>
 	<p class="summary">Our consultants have expertise in developing EB education programs, training faculty employees, residents, and student at all levels and providing program implementation and program evaluation consulting services. All of our consultants bring an extensive background in evidence-based healthcare training and program implementation.</p>
-	
+	<p class="summary">Let's Work Together. Give us a call at <a href="tel:(224) 534-9431">(224) 534-9431</a> or send us an email at <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a>
 	</div>
 	<div class="span-4 col box">
 		<h3 class="text-center">Elliot Abt, DDS, MS, MSc</h2>
-		<img src="/img/common/hawley.jpg"/> 
+		<img src="/img/common2x/abt.jpg"/> 
 		<p class="summary">Elliot Abt received a bachelor's degree in molecular biology from the University of Wisconsin-Madison. He went on to graduate training and received a master's degree in oral pathology and dental degree from the University of Illinois. Dr. Abt completed his dental residency training at Ravenswood and the University of Illinois Hospitals. From 1989-2004, Dr. Abt was the director of the dental residency programs at Ravenswood and Illinois Masonic Medical Center. He later went back to graduate school and received a master's degree in evidence-based healthcare from Oxford University. Dr. Abt is on the editorial board of the Journal of Evidence-Based Dental Practice, and has published articles and book chapters on research design, methodology, and statistical analysis of the dental literature. He has also participated in several ADA systemic reviews and clinical practice guidelines and is a current member of the ADA EBD Faculty Development Program. Dr. Abt is an adjunct associate professor of oral medicine at the University of Illinois and directs the journal club for dental residents at Illinois Masonic Medical Center. He is on the Critical Review Panel of the American Dental Association (ADA) Center for Evidence-Based Dentistry and teaches research methodology and biostatistics at the ADA/Forsyth Advanced EBD Course. Dr. Abt is in private dental practice and is a member of the ADA Council on Scientific Affairs.</p>
 	</div>
 	<div class="span-4 col box two">
 		<h3 class="text-center">Julie Frantsve-Hawley, PhD</h2>
-		<img src="/img/common/hawley.jpg"/>
+		<img src="/img/common2x/hawley.jpg"/>
 		<p class="summary">Julie Hawley received a bachelor's degree in biology from Loyola University of Chicago and a PhD from Harvard University's Biological and Biomedical Sciences program. She conducted a postdoctoral fellowship at the University of California, San Francisco, and attended the Medical Informatics program at Woods Hole and the Summer Institute at the Alan Alda Center for Communicating Science at Stony Brook University. Dr. Hawley directed the American Dental Association's Center for Evidence-based Dentistry for 10 years where she led the ADA's EBD workshop, and multiple custom EBD training programs for dental school faculty. She developed and launched the ADA's EBD website and their evidence-based practice guidelines program. De. Hawley has been the PI on several grants from the National Institute for Dental and Craniofacial Research, the National Library of Medicine, and the Agency for Healthcare Research and Quality. She is involved in dissemination and implementation research aimed at helping clinicians implement science into practice. She is also the editor of a textbook on Evidence-Based Dentistry published by Quintessence.</p>
 	</div>
 	<div class="span-4 col box three">
 		<h3 class="text-center">Robert J Weyant, MS, DMD, DrPH</h2>
-		<img src="/img/common/hawley.jpg"/>
+		<img src="/img/common2x/weyant.jpg"/>
 		<p class="summary">Robert J. Weyant received a bachelor's, master's and dental degrees from the University of Pittsburgh and a doctorate in public health (epidemiology) from the University of Michigan. Dr. Weyant is professor and chair of the Department of Dental Public Health and associate dean for public health at the University of Pittsburgh School of Dental Medicine. He is the current editor-in-chief of the Journal of Public Health Dentistry. Dr. Weyant runs an NIH sponsored research program in dental epidemiology focussing on oral health disparities of caries in children and has authored or co-authored over 100 papers in the peer review literature as well as two textbook chapters on evidence-based dentistry. He has been the principle developer of the evidence-based dentistry program at the University of Pittsburgh that includes didactic, small group, and clinical EBD training of dental students. This training program has been in operation for over 15 years. In addition to his training in epidemiology, Dr. Weyant completed courses in evidence-based care at the Forsyth Center and Oxford University. He presently participates as in instructor in the ADA Champions program and the ADA EBD Faculty Development Program. Dr. Weyant has been a mentor in the ADA's Critical Review Panel, is former associate editor of the Journal of Evidence-Based Dental Practice, and participated in the ADA development of several ADA systematic reviews and guideline development. Dr. Weyant has been a tutor in tow courses on teaching evidence-based medicine at Oxford University. He also has been a member of the Institute of Medicine Panel on dental access and on the National Advisory Panel for NIH's National Institute for Dental and Craniofacial Research.</p>
 	</div>	
 </section>
