watching master and commander

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 			<aside>
 				<h1 class="text-center">Improve Health Outcomes</h1>
 				<p class="text-center">Let EBHC Group prepare you to implement evidence-based healthcare.</p>
+				<p class="text-center"><a href="tel:(224) 534-9431">(224) 534-9431</a> • <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a></p>
 			</aside>
 		</div>
 		<p class="icon flaticon-arrow558"></p> 
@@ -37,7 +38,7 @@ layout: default
 			<h3 class="text-center">Online-only courses</h3>
 			<p class="icon text-center flaticon-online1"></p>
 			<p class="summary">This one semester online course includes exercises, quizzes and automatic grade reporting. Topics include:</p>
-				<ul class="summary">
+				<ul class="summary spaced-list">
 					<li>Introduction to EBHC</li>
 					<li>Levels of Evidence</li>
 					<li>Strategic Literature Searching</li>
@@ -81,7 +82,7 @@ layout: default
 			<p>Implementation is the key to success</p>
 		</aside>
 		<p class="summary">Implementation is the key to developing an EBHC approach to treating patients. However, research indicates that increasing knowledge is not sufficient to motivate change to EBHC. There are many barriers, including both individual and institutional barriers that may prevent progress. EBHC Group offers customized implementation programs to help organizations succeed. Our programs include:</p>
-		<ul class="summary">
+		<ul class="summary spaced-list">
 			<li>Needs Assessment</li>
 			<li>Strategic Implementation Plan Development</li>
 			<li>Customized Education and Training Programs</li>
