--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ layout: default
 </section>
 <section id="big-three" class="clearfix">
 	<div class="span-4 col box" data-destination="education">
-		<h3 class="text-center">Get Educated</h2>
+		<h3 class="text-center">Broaden Education</h2>
 		<p class="icon text-center flaticon-open135"></p> 
 	</div>
 	<div class="span-4 col box two" data-destination="training">
-		<h3 class="text-center">Get Trained</h2>
+		<h3 class="text-center">Receive Training</h2>
 		<p class="icon text-center flaticon-two174"></p> 
 	</div>
 	<div class="span-4 col box three" data-destination="implementation">
@@ -28,14 +28,14 @@ layout: default
 <section id="education">
 	<div class="content">
 	<aside>
-		<h2>Get Educated</h2>
-		<p>Developing a new standard in distance learning.</p>
+		<h2>Broaden Education</h2>
+		<p>Developing a new standard in distance learning</p>
 	</aside> 
 		<p class="summary">The EBHC Group is developing distance learning educational programs that will help educational institutions teach evidence-based healthcare. This program will implement state of the art distance learning technologies to facilitate both asynchronous and synchronous learning platforms.</p>
 	</div>
 	<div class="clearfix">
 		<div class="box online col span-6">
-			<h3 class="text-center">Online-only courses</h3>
+			<h3 class="text-center">Online courses</h3>
 			<p class="icon text-center flaticon-online1"></p>
 			<p class="summary">This one semester online course includes exercises, quizzes and automatic grade reporting. Topics include:</p>
 				<ul class="summary spaced-list">
@@ -61,7 +61,7 @@ layout: default
 <section id="training">
 	<div class="content">
 		<aside>
-			<h2>Get Trained</h2>
+			<h2>Receive Training</h2>
 			<p>Spreading high quality medicine world-wide</p>
 		</aside>
 		<p class="summary">Evidence-based healthcare is the standard for the practice of contemporary, high-quality medicine throughout the world. U.S. healthcare schools, including medicine, dentistry and allied healthcare professionals, all offer a curriculum in EBHC.</p>
@@ -94,13 +94,12 @@ layout: default
 	<div class="content">
 	<aside>
 		<h2>Who We Are</h2>
-		<p>We take evidence-based healthcare very seriously.</p>
 	</aside>
 	<p class="summary">Our consultants have expertise in developing EB education programs, training faculty employees, residents, and student at all levels and providing program implementation and program evaluation consulting services. All of our consultants bring an extensive background in evidence-based healthcare training and program implementation.</p>
 	<p class="summary">Let's Work Together. Give us a call at <a href="tel:(224) 534-9431">(224) 534-9431</a> or send us an email at <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a>
 	</div>
 	<div class="span-4 col box">
-		<h3 class="text-center">Elliot Abt, DDS, MS, MSc</h2>
+		<h3 class="text-center">Elliot Abt, DDS, MS, MS<small>c</small></h2>
 		<img src="/img/common2x/abt.jpg"/> 
 		<p class="summary">Elliot Abt received a bachelor's degree in molecular biology from the University of Wisconsin-Madison. He went on to graduate training and received a master's degree in oral pathology and dental degree from the University of Illinois.</p> 
 		<p class="summary">Dr. Abt completed his dental residency training at Ravenswood and the University of Illinois Hospitals. From 1989-2004, Dr. Abt was the director of the dental residency programs at Ravenswood and Illinois Masonic Medical Center. He later went back to graduate school and received a master's degree in evidence-based healthcare from Oxford University.</p>
@@ -108,7 +107,7 @@ layout: default
 				<p class="summary">Dr. Abt is an adjunct associate professor of oral medicine at the University of Illinois and directs the journal club for dental residents at Illinois Masonic Medical Center. He is on the Critical Review Panel of the American Dental Association (ADA) Center for Evidence-Based Dentistry and teaches research methodology and biostatistics at the ADA/Forsyth Advanced EBD Course. Dr. Abt is in private dental practice and is a member of the ADA Council on Scientific Affairs.</p>
 	</div>
 	<div class="span-4 col box two">
-		<h3 class="text-center">Julie Frantsve-Hawley, PhD</h2>
+		<h3 class="text-center">Julie Frantsve-Hawley, P<small>h</small>D</h2>
 		<img src="/img/common2x/hawley.jpg"/>
 		<p class="summary">Julie Hawley, PhD, is the Executive Director of the American Association of Public Health Dentistry (AAPHD) and an Adjunct Clinical Assistant Professor at the University of Illinois College of Dentistry.  Prior to joining AAPHD, Dr. Hawley directed the American Dental Association’s Center for Evidence-based Dentistry for 10 years where she developed and launched many of the ADA’s EBD initiatives, including the ADA’s EBD website, the ADA evidence-based practice guidelines program, and multiple educational programs.</p>
 		<p class="summary">Dr. Hawley has lead organizing committees and been a head instructor for educational programs for practicing dentists, dental school faculty, and students.  Examples include the ADA’s flagship EBD Champions Conference, the Advanced EBD Workshop, and online tutorials.  She also led efforts to develop and teach multiple custom EBD training programs for dental school faculty throughout the US.</p>
@@ -116,7 +115,7 @@ layout: default
 		<p class="summary">Dr. Hawley received a bachelor’s degree in biology from Loyola University of Chicago and a PhD from Harvard University’s Biological and Biomedical Sciences program.  She conducted a postdoctoral fellowship at the University of California, San Francisco, and attended the Medical Informatics program at Woods Hole and the Summer Institute at the Alan Alda Center for Communicating Science at Stony Brook University. She is also the editor of a textbook on Evidence-Based Dentistry published by Quintessence.</p>
 	</div>
 	<div class="span-4 col box three">
-		<h3 class="text-center">Robert J Weyant, MS, DMD, DrPH</h2>
+		<h3 class="text-center">Robert J Weyant, MS, DMD, D<small>r</small>PH</h2>
 		<img src="/img/common2x/weyant.jpg"/>
 		<p class="summary">Robert J. Weyant is professor and chair of the Department of Dental Public Health and associate dean for public health at the University of Pittsburgh School of Dental Medicine. He is the current editor-in-chief of the Journal of Public Health Dentistry. Dr. Weyant is the principle developer of the evidence-based dentistry program at the University of Pittsburgh that includes didactic, small group, and clinical EBD training of dental students. This training program has been in operation for over 15 years. This year Dr. Weyant was the inaugural recipient of the ADA/AADR Evidence-based Dentistry Faculty Teaching Award.</p>
 		<p class="summary">Dr. Weyant’s educational background related to EBD includes a doctoral degree in epidemiology from the University of Michigan and completion of EBD courses at the Boston Forsyth Center and Oxford University.</p>
