updated hero positioning

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 <section id="hero">
 	<div class="content">
 			<aside>
-				<h1 class="text-center">Improve Health Outcomes</h1>
-				<p class="text-center">Let EBHC Group prepare you to implement evidence-based healthcare.</p>
-				<p class="text-center"><a href="tel:(224) 534-9431">(224) 534-9431</a> • <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a></p>
+				<h1>Improve Health Outcomes</h1>
+				<p>Let EBHC Group prepare you to implement evidence-based healthcare.</p>
+				<p><a href="tel:(224) 534-9431">(224) 534-9431</a> • <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a></p>
 			</aside>
 		</div>
 		<p class="icon flaticon-arrow558"></p> 
